* Calendar: Fix calendar view overlaps the sidebar menu in jdots template

--- a/egw_fw.css
+++ b/egw_fw.css
@@ -719,5 +719,5 @@ html, body {
     border: solid 10px  #679FD2;
     transform: translate(-50%, -50%);
 }
-
+#egw_fw_main .egw_fw_ui_tab_content>div {width:100%;padding:0;position: relative;}
 /*################################## END OF LOADING PROMPT #############*/
